# CxRP

./: .custodian.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.console/: log.md
.custodian/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cxrp/: __init__.py
cxrp/contracts/: __init__.py  common.py  execution_request.py  execution_result.py  execution_target.py  lane_decision.py  task_proposal.py
cxrp/schemas/v0.2/: execution_request.schema.json  lane_decision.schema.json
cxrp/validation/: json_schema.py
cxrp/vocabulary/: agent_topology.py  artifact.py  lane.py  status.py
docs/integrations/: operations_center.md  operator_console.md  switchboard.md
docs/spec/: execution_target.md  v0.2.md
ecp/contracts/: lane_decision.py
tests/: conftest.py  test_agent_topology.py  test_contracts.py  test_execution_target.py
